[package]
name = "reagenz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
smol_str = "0.1.24"
ramble = { git = "https://github.com/phaylon/ramble", version = "0.1.0" }
scopeguard = "1.1.0"
smallvec = { version = "1.10.0", features = ["const_generics"] }
num-traits = "0.2.15"
