[package]
name = "reagenz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = "0.1.24"
smallvec = { version = "1.10.0", features = ["const_generics"] }
derivative = "2.2.0"
walkdir = "2.3.3"
treelang = { git = "https://github.com/phaylon/treelang", version = "0.1.0" }
thiserror = "1.0.40"
if_chain = "1.0.2"
scopeguard = "1.1.0"
flagnum = { git = "https://github.com/phaylon/flagnum", version = "0.1.0" }
float-ord = "0.3.2"
src-ctx = { git = "https://github.com/phaylon/src-ctx", version = "0.1.0" }

[dev-dependencies]
assert_matches = "1.5.0"
