[package]
name = "reagenz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol_str = { version = "0.1.24", features = ["serde"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
derivative = "2.2.0"
walkdir = "2.3.3"
treelang = { git = "https://github.com/phaylon/treelang", version = "0.1.0" }
thiserror = "1.0.40"
if_chain = "1.0.2"
scopeguard = "1.1.0"
flagnum = { git = "https://github.com/phaylon/flagnum", version = "0.1.0" }
src-ctx = { git = "https://github.com/phaylon/src-ctx", version = "0.1.0" }
serde = { version = "1.0.159", features = ["derive", "rc"] }
ordered-float = { version = "3.6.0", features = ["serde"] }

[dev-dependencies]
assert_matches = "1.5.0"
